--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <version>1.16.4</version>
             <scope>provided</scope>
         </dependency>
+        <!-- NBT Reading -->
+        <dependency>
+            <groupId>org.spacehq</groupId>
+            <artifactId>opennbt</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- Utilities -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -79,6 +86,11 @@
         <repository>
             <id>ellune-repo</id>
             <url>https://repo.ellune.net/content/groups/public/</url>
+        </repository>
+        <!-- OpenNBT Repo -->
+        <repository>
+            <id>spacehq-repo</id>
+            <url>https://repo.spacehq.org/content/repositories/releases/</url>
         </repository>
     </repositories>
 </project>
