--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.spudcompat</groupId>
+    <groupId>net.techcable.spudcompat</groupId>
     <artifactId>spudcompat</artifactId>
     <version>1.0.0-alpha1-SNAPSHOT</version>
     <name>SpudCompat</name>
@@ -10,11 +10,11 @@
     </properties>
 
     <dependencies>
-        <!-- Require Waterfall (not bungee) -->
+        <!-- Require Waterfall (not bungee) for proper/safe 1.7 support -->
         <dependency>
             <groupId>io.github.waterfallmc</groupId>
-            <artifactId>waterfall-api</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <artifactId>waterfall-proxy</artifactId>
+            <version>1.9-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!-- Use lombok to reduce boilerplate -->
@@ -23,6 +23,12 @@
             <artifactId>lombok</artifactId>
             <version>1.16.4</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- Events -->
+        <dependency>
+            <groupId>net.techcable</groupId>
+            <artifactId>event4j</artifactId>
+            <version>1.1.0-beta2</version>
         </dependency>
         <!-- NBT Reading -->
         <dependency>
@@ -53,7 +59,15 @@
                         <relocation>
                             <relocation>
                                 <pattern>org.apache.commons.lang3</pattern>
-                                <shadedPattern>io.github.spudcompat.libs.commons-lang3</shadedPattern>
+                                <shadedPattern>net.techcable.spudcompat.libs.commons-lang3</shadedPattern>
+                            </relocation>
+                            <relocation>
+                                <pattern>org.spacehq.opennbt</pattern>
+                                <shadedPattern>net.techcable.spudcompat.libs.opennbt</shadedPattern>
+                            </relocation>
+                            <relocation>
+                                <pattern>net.techcable.event4j</pattern>
+                                <shadedPattern>net.techcable.spudcompat.libs.event4j</shadedPattern>
                             </relocation>
                         </relocation>
                     </relocations>
@@ -84,8 +98,8 @@
         </repository>
         <!-- Waterfall Repo -->
         <repository>
-            <id>ellune-repo</id>
-            <url>https://repo.ellune.net/content/groups/public/</url>
+            <id>kashike-repo</id>
+            <url>https://repo.miserable.ninja/content/groups/public/</url>
         </repository>
         <!-- OpenNBT Repo -->
         <repository>
